unpackaged/main/default/objects/litify_docs__File_Link__c/litify_docs__File_Link__c.object-meta.xml
<CustomObject>
    <description>Stores information about links to files.</description>
    <label>File Link</label>
    <nameField>
        <displayFormat>FL-{000000}</displayFormat>
        <label>File Link Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>File Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>