unpackaged/main/default/objects/litify_docs__File_Link__c/fields/litify_docs__Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Expiration_Date__c</fullName>
    <description>The date that the file link expires.</description>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>