unpackaged/main/default/objects/litify_docs__File_Link__c/fields/litify_docs__Expired__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Expired__c</fullName>
    <description>Indicates whether the file link&#39;s expiration date has passed or not.</description>
    <formula>TODAY() &gt; litify_docs__Expiration_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expired</label>
    <type>Checkbox</type>
</CustomField>