unpackaged/main/default/objects/litify_docs__File_Link__c/fields/litify_docs__Password__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Password__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the file link is password-protected or not.</description>
    <label>Password</label>
    <type>Checkbox</type>
</CustomField>