unpackaged/main/default/objects/litify_docs__File_Link__c/fields/litify_docs__Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Unique_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Unique Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>